Create project now populates list of possible estimators to invite from db

--- a/www/templates/pages/project/index.html
+++ b/www/templates/pages/project/index.html
@@ -23,7 +23,7 @@
     
     <div flex="50" flex-md="100" layout="column">
       <fieldset class="standard" flex>
-        <legend>Using <code>&lt;input type="checkbox"&gt;</code></legend>
+        <legend>Select estimators for this project</code></legend>
         <div layout="row" layout-wrap>
           <div ng-repeat="item in people" class="standard" flex="50">
             <label>
