Dialog now closes on save

--- a/www/templates/dialogs/project_node_description.tmpl.html
+++ b/www/templates/dialogs/project_node_description.tmpl.html
@@ -1,31 +1,31 @@
 <md-dialog aria-label="Node Description" flex="75">
-  <form>
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <h2>{{currentNode.title}}</h2>
-      <span flex></span>
-      <md-button class="md-icon-button" ng-click="cancel()">
-        <md-icon md-svg-src="img/icons/close.svg" aria-label="Close dialog"></md-icon>
-      </md-button>
-    </div>
-  </md-toolbar>
-  <md-dialog-content>
-    <div>
-      <md-input-container flex>
-        <label> Node Description </label>
-        <textarea ng-model="currentNode.description" columns="1" ng-disabled="false" ></textarea> 
-      </md-input-container>
-      <span flex></span>
-    </div>
-  </md-dialog-content>
-  <div class="md-actions" layout="row">
-    <span flex></span>
-    <md-button ng-click="cancel()" class="md-primary">
-     Close
-    </md-button>
-    <md-button ng-click="saveProject()" class="md-primary">
-      Save
-    </md-button>
-  </div>
-  </form>
+	<form>
+		<md-toolbar>
+			<div class="md-toolbar-tools">
+				<h2>{{currentNode.title}}</h2>
+				<span flex></span>
+				<md-button class="md-icon-button" ng-click="cancel()">
+					<md-icon md-svg-src="img/icons/close.svg" aria-label="Close dialog"></md-icon>
+				</md-button>
+			</div>
+		</md-toolbar>
+		<md-dialog-content>
+			<div>
+				<md-input-container flex>
+					<label> Node Description </label>
+					<textarea ng-model="currentNode.description" columns="1" ng-disabled="false" ></textarea> 
+				</md-input-container>
+				<span flex></span>
+			</div>
+		</md-dialog-content>
+		<div class="md-actions" layout="row">
+			<span flex></span>
+			<md-button ng-click="cancel()" class="md-primary">
+				Close
+			</md-button>
+			<md-button ng-click="saveProject(); cancel()" class="md-primary">
+				Save
+			</md-button>
+		</div>
+	</form>
 </md-dialog>
