--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -5,7 +5,7 @@
 		md-cols-sm="1" md-cols-md="3" md-cols-gt-md="4"
 		md-row-height-gt-md="1:1" md-row-height="1:1"
 		md-gutter="10px" md-gutter-gt-sm="10px" >
-	<md-grid-tile ng-repeat="project in projects" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1;">
+	<md-grid-tile ng-repeat="project in projects" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1; position: absolute">
 		<md-card flex class = "cardHeight">
 			<md-toolbar layout = "row" class = "cardHeader">
 				<div class="md-toolbar-tools">
