You can now show and hide members on the project page

--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -15,9 +15,17 @@
 	    </md-input-container>
 	    <md-divider>
 		</md-divider>
-		<md-list>
-			<md-subheader class="md-primary">Project Members</md-subheader>
-			<md-list-item ng-repeat="user in project.users">
+		<md-content layout = "coloum">
+		<md-button class="md-icon-button" aria-label="More" ng-hide="members" ng-click="members = !members">
+        	<md-icon md-svg-icon="img/icons/down_arrow.svg"></md-icon>
+      	</md-button>
+      	<md-button class="md-icon-button" aria-label="More" ng-show="members" ng-click="members = !members">
+        	<md-icon md-svg-icon="img/icons/right_arrow.svg"></md-icon>
+      	</md-button>
+      	<md-subheader class="md-primary">Project Members</md-subheader>
+      	</md-content>
+		<md-list ng-hide="members">
+			<md-list-item ng-repeat="user in project.users" >
 				{{user}}
 			</md-list-item>
 		</md-list>
