--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -60,16 +60,16 @@
 			<br/>
 			<md-card-content class="md-padding" class = "cardHeight" style="overflow:auto;"> 
 			<p>{{project.description}}</p>
-			<md-divider>
-			</md-divider>
-			<md-list>
+			<!-- <md-divider>
+			</md-divider> -->
+			<!-- <md-list>
 				<md-subheader class="md-primary">Project Members</md-subheader>
 				<md-list-item ng-repeat="user in project.users">
 				{{user}}
 				</md-list-item>
-			</md-list>
-			<md-divider>
-			</md-divider>
+			</md-list> -->
+			<!-- <md-divider>
+			</md-divider> -->
 			</md-card-content>
 		</md-card>
 	</md-grid-tile>
