--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -113,6 +113,7 @@
 	  	<md-button class = "md-primary md-raised" ng-click = "addRootNode()" ng-show = "rootIsEmpty()">
 	  		Add root node
 	  	</md-button>
+	  	<md-button class = "md-primary md-raised" ng-click = "" ng-disabled = "" ng-show = "authorisedForEstimation()">Submit Estimation</md-button>
 	  	</md-content>
 	</md-card>
 </div>
