Added submit estimation button

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -18,7 +18,8 @@
           md-min-length="0"
           placeholder="Search"
           md-menu-class="autocomplete-custom-template"
-          class = "searchBar">
+          class = "searchBar"
+          focusOnOpen = "false">
         <md-item-template>
           <span class="item-title">
             <span>
