--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -70,7 +70,7 @@
             </md-input-container>
             <md-input-container class = "treeInput" flex ="10">
               <label>Qty</label>
-              <input ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this)">
+              <input ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this)" required>
             </md-input-container>
             <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="showDescriptionDialog($event, node)">
                 <md-tooltip>
@@ -96,6 +96,7 @@
             </li>
           </ol>
         </script>
+        <form name = "estimationForm">
         <div>
           <div>
             <div ui-tree id="tree-root">
@@ -105,6 +106,7 @@
             </div>
           </div>
         </div>
+        </form>
         <!-- Nested node template -->
         <md-content label="row">
         <md-button class = "md-primary md-raised" ng-click = "saveProject()">
@@ -113,6 +115,10 @@
         <md-button class = "md-primary md-raised" ng-click = "addRootNode()" ng-show = "rootIsEmpty()">
             Add root node
         </md-button>
+        <md-button class = "md-primary md-raised" ng-click = "" ng-show = "true" ng-disabled = "estimationForm.$invalid">
+            Submit estimation
+        </md-button>
+
         </md-content>
     </md-card>
 </div>
