Fixed sidenav size issues

--- a/public/modules/sidenav/views/sidenav.client.view.html
+++ b/public/modules/sidenav/views/sidenav.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="SidenavController" class = "sidenav">
-	<md-sidenav class="md-sidenav-left md-whiteframe-z2 sidenav" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" layout = "row" >
+	<md-sidenav class="md-sidenav-left md-whiteframe-z2 sidenav" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 		<md-list ng-controller="LeftCtrl">
 			<!-- <md-divider></md-divider> -->
 			<md-list-item ng-click="go('/')">
