--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -25,7 +25,7 @@
             <h3>Project Members</h3>
             <md-button class="md-icon-button" aria-label="More" ng-click = "getUsers()">
                 <md-tooltip>
-                  Add Memeber
+                  Add Member
                 </md-tooltip>
                 <md-icon md-svg-icon="modules/projects/img/icons/add.svg"></md-icon>
             </md-button>
@@ -115,7 +115,7 @@
         <md-button class = "md-primary md-raised" ng-click = "addRootNode()" ng-show = "rootIsEmpty()">
             Add root node
         </md-button>
-        <md-button class = "md-primary md-raised" ng-click = "" ng-show = "true" ng-disabled = "estimationForm.$invalid">
+        <md-button class = "md-primary md-raised" ng-click = "" ng-show = "!rootIsEmpty()" ng-disabled = "estimationForm.$invalid">
             Submit estimation
         </md-button>
 
