Reworked project page to fix sidenav issue

--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -45,10 +45,9 @@ md-fab-toolbar .md-fab-toolbar-wrapper {
 }
 
 .searchBar {
-	margin-top: 20px;
+	/*margin-top: 20px;*/
 	margin-bottom: 20px;
 }
-
 
 .btn {
 	margin-right: 8px;
