--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -8,6 +8,9 @@
           <span>Estimate Swarm</span>
         </h2>
         <span flex></span>
+        <md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')">
+        	<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
+        </md-button>
       </div>
 </md-toolbar>
 </div>
