Work on the sidenav to get it back to its former glory! Main page is somewhat broken however

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,16 +1,13 @@
 <div class="container" data-ng-controller="HeaderController">
-<md-toolbar class="md-whiteframe-z2">
-      <div class="md-toolbar-tools" >
-        <md-button class="md-icon-button headerButton" aria-label="Settings"  ng-click="toggleLeft()" hide-gt-md>
-          <md-icon md-svg-src="modules/core/img/icons/menu.svg" class="s24" aria-label="Cake"></md-icon>
-        </md-button>
-        <h2>
-          <span>Estimate Swarm</span>
-        </h2>
-        <span flex></span>
-        <md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')">
-        	<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
-        </md-button>
-      </div>
-</md-toolbar>
+	<md-toolbar class="md-whiteframe-z2">
+		<div class="md-toolbar-tools mainToolbar" >
+			<md-button class="md-icon-button headerButton" aria-label="Settings" ng-click="toggleLeft()" hide-gt-md>
+				<md-icon md-svg-src="modules/core/img/icons/menu.svg" class="darkIcon" aria-label="Cake"></md-icon>
+			</md-button>
+			<span flex></span>
+			<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')">
+				<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
+			</md-button>
+		</div>
+	</md-toolbar>
 </div>
