--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -44,12 +44,14 @@
 </head>
 
 <body class="ng-cloak">
-	<header data-ng-include="'/modules/core/views/header.client.view.html'"></header>
-	<div layout = "row" class = "sidenav">
-	<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class = "sidenav"></section>
-	<section class="container" flex>
-		{% block content %}{% endblock %}
-	</section>
+	<div layout = "row" class="fullFlex">
+		<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class = "sidenav"></section>
+		<div layout = "column" flex>
+			<div data-ng-include="'/modules/core/views/header.client.view.html'"></div>
+			<section class="container" flex>
+				{% block content %}{% endblock %}
+			</section>
+		</div>
 	</div>
 
 	<!--Embedding The User Object-->
