confirmation dialog is now working

--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ProjectsController">
+<section data-ng-controller="ProjectsController" data-ng-init="confirm = true">
 <div layout="column" flex>
   <md-card>
   <md-toolbar>
