--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ProjectsController" data-ng-init="find()">
+<section data-ng-controller="ProjectsController" data-ng-init="find();confirm = true">
 	<md-autocomplete 
 		ng-disabled="isDisabled"
 		md-no-cache="noCache"
