Submit estimation just saves project at the moment, pending proper implimentation

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -115,7 +115,7 @@
         <md-button class = "md-primary md-raised" ng-click = "addRootNode()" ng-show = "rootIsEmpty()">
             Add root node
         </md-button>
-        <md-button class = "md-primary md-raised" ng-click = "" ng-show = "!rootIsEmpty()" ng-disabled = "estimationForm.$invalid">
+        <md-button class = "md-primary md-raised" ng-click = "saveProject()" ng-show = "!rootIsEmpty()" ng-disabled = "estimationForm.$invalid">
             Submit estimation
         </md-button>
 
