--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProjectsController" flex = "100"  data-ng-init="findOne()">
+<div ng-controller="ProjectEditController" flex = "100"  data-ng-init="findOne()">
     <md-card flex = "100">
         <md-toolbar>
             <div class="md-toolbar-tools">
