--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -70,7 +70,7 @@
             </md-input-container>
             <md-input-container class = "treeInput" flex ="10" ng-show = "estimator()">
               <label>Qty</label>
-              <input ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this)" required>
+              <input ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this)" ng-readonly = "estimated" required>
             </md-input-container>
             <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="showDescriptionDialog($event, node)" ng-show="owner()">
                 <md-tooltip>
@@ -115,7 +115,7 @@
         <md-button class = "md-primary md-raised" ng-click = "addRootNode()" ng-show = "rootIsEmpty()">
             Add root node
         </md-button>
-        <md-button class = "md-primary md-raised" ng-click = "saveProject()" ng-show = "!rootIsEmpty() && estimator()" ng-disabled = "estimationForm.$invalid">
+        <md-button class = "md-primary md-raised" ng-click = "submitEstimation()" ng-show = "!rootIsEmpty() && estimator() && !estimated" ng-disabled = "estimationForm.$invalid">
             Submit estimation
         </md-button>
 
