--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -38,12 +38,15 @@
 		<md-grid-tile ng-repeat="project in querySearch(searchText)" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1; position: absolute">
 			<md-card flex class = "cardHeight" >
 				<md-toolbar layout = "row" class = "cardHeader">
+					<md-button class="md-icon-button" ng-show = "owner(project)" ng-click = "goTo('/settings/profile')">
+						<md-tooltip>
+							Owner
+						</md-tooltip>
+						<md-icon md-svg-src="modules/projects/img/icons/person.svg"></md-icon>
+					</md-button>
 					<div class="md-toolbar-tools">
 						<h3>{{project.name}}</h3>
 					</div>
-					<md-button aria-label="photo" class="md-icon-button" ng-show = "owner(project)">
-						<md-icon md-svg-src="modules/projects/img/icons/person.svg"></md-icon>
-					</md-button>
 					<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/projects/{{project._id}}/edit')">
 						<md-tooltip>
 							View/Edit
