--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -36,11 +36,11 @@
 		md-gutter="10px" md-gutter-gt-sm="10px" >
 
 		<md-grid-tile ng-repeat="project in querySearch(searchText)" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1; position: absolute">
-			<md-card flex class = "cardHeight" >
+			<md-card flex class = "cardHeight">
 				<md-toolbar layout = "row" class = "cardHeader">
 					<div style="padding: 10px" class="md-toolbar-tools">
-						<div style="overflow:auto;" class="cardHeight">
-							<h3>{{project.name}}</h3>
+						<div id="namediv" ng-hide="isNotOverflow()">
+							<marquee><h3>{{project.name}}</h3></marquee>
 						</div>
 					</div>
 					<md-button aria-label="photo" class="md-icon-button">
