Added the missing div tag

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -47,6 +47,7 @@
 					<div style="padding: 10px" class="md-toolbar-tools">
 						<div style="overflow:auto;" class="cardHeight">
 							<h3>{{project.name}}</h3>
+						</div>
 					</div>
 					<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/projects/{{project._id}}/edit')">
 						<md-tooltip>
