--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -44,7 +44,7 @@
 						</md-tooltip>
 						<md-icon md-svg-src="modules/projects/img/icons/person.svg"></md-icon>
 					</md-button>
-					<div style="padding: 10px" class="md-toolbar-tools">
+					<div style="padding: 10px; overflow:hidden" class="md-toolbar-tools">
 						<marquee><h3>{{project.name}}</h3></marquee>
 					</div>
 					<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/projects/{{project._id}}/edit')">
