--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -39,7 +39,7 @@
 			<md-card flex class = "cardHeight">
 				<md-toolbar layout="row" class="cardHeader">
 					<div style="padding: 10px; overflow:hidden" class="md-toolbar-tools">
-						<marquee><h3>{{project.name}}</h3></marquee>
+						<marquee width="100%"><h3>{{project.name}}</h3></marquee>
 					</div>
 					<md-button aria-label="photo" class="md-icon-button">
 						<md-icon md-svg-src="modules/projects/img/icons/home.svg"></md-icon>
