attemps to fix the name issue

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -3,7 +3,7 @@
 		<md-toolbar>
 			<div style="padding: 20px; padding-top: 30px; overflow:hidden" class="md-toolbar-tools">
 				<div class="md-toolbar-tools">
-					<marquee> <h2>{{project.name}}</h2> </marquee>
+					<marquee width="100%"> <h2>{{project.name}}</h2> </marquee>
 					<span flex></span>
 					<p>{{currentNode.title}}</p>
 				</div>
