--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -38,8 +38,9 @@
 		<md-grid-tile ng-repeat="project in querySearch(searchText)" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1; position: absolute">
 			<md-card flex class = "cardHeight">
 				<md-toolbar layout="row" class="cardHeader">
-					<div style="padding: 10px; overflow:hidden" class="md-toolbar-tools">
-						<marquee width="100%"><h3>{{project.name}}</h3></marquee>
+					<div id="marquee" style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
+						<h3 ng-hide="isOverflow()">{{project.name}}</h3>
+						<marquee width="100%"><h3 ng-hide="isNotOverflow()">{{project.name}}</h3></marquee>
 					</div>
 					<md-button aria-label="photo" class="md-icon-button">
 						<md-icon md-svg-src="modules/projects/img/icons/home.svg"></md-icon>
